src/css/style.css
body {
    font-family: "Lato", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
    font-family: "Lato", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
    font-weight: bold;
}

/* Main page content headers */
.page-header {
    margin-top: 0;
}

@media (min-width: 768px) {
    .page-header h1 {
        margin-top: 0 !important;
    }
}

/* Main navigation */
/* - Position the OC.TC logo in relation to the navbar-brand text */
.navbar-brand img {
    margin-top: -6px;
    margin-right: 8px;
    margin-bottom: -11px;
    float: left;
}

/* - Tweak navbar item hover and focus colors */
.navbar .navbar-nav > li:not(.active) > a:hover,
.navbar .navbar-nav > li:not(.active) > a:focus {
    color: #555555;
    background-color: #f2f2f2;
    background-image: -webkit-linear-gradient(top, #f2f2f2 0%, #ebebeb 100%);
    background-image: linear-gradient(to bottom, #f2f2f2 0%, #ebebeb 100%);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff2f2f2', endColorstr='#ffebebeb', GradientType=0);
    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
}

/* Jumbotron */
/* - Reduce overall size of jumbotron subheads
   - Add a pattern background overlay to all sizes */
.jumbotron {
    position: relative;
    color: #fff;
    background: #450f43;
    -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
       -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
            box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
}

.jumbotron .container {
    position: relative;
    z-index: 2;
}

.jumbotron:after {
    background: url("../img/grid-15px.png") repeat scroll center center transparent;
    content: '';
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    opacity: .8;
}

@media (min-width: 768px) {
    .jumbotron.subhead {
        padding: 30px 40px;
        padding-bottom: 20px;
    }
    .jumbotron.subhead h1 {
        font-size: 45px;
    }
    .jumbotron.subhead .lead {
        font-size: 20px;
    }
}
@media (max-width: 767px) {
    .jumbotron.subhead {
        padding: 24px 30px;
        padding-bottom: 14px;
    }
}
.jumbotron.subhead .lead {
    margin-bottom: 10px;
}
.jumbotron.subhead h1 {
    margin-top: 0;
}


/* Misc */
code {
   padding: 1px 4px;
}

td pre {
    margin-bottom: 0;
    display: inline-block;
    border: none;
    padding: 1px 4px;
}

.right-ref-link {
    float: right;
    margin-left: 8px;
}

.docs-footer {
    margin-bottom: 20px;
}

.alert.alert-small {
    padding: 5px 7px 4px 7px;
}

/* Sidebar navigation */
.subnav-btn {
    float: none !important;
}

.docs-nav-pills > li > a {
    position: relative;
    display: block;
    padding: 8px 14px;
}

/* - Navigation menu selection and active row colors */
.dropdown-menu > .active > a{
    color: #333333;
    background-color: #e6e6e6;
    background-image: -webkit-gradient(linear, left 0%, left 100%, from(#eaeaea), to(#e6e6e6));
    background-image: -webkit-linear-gradient(top, #eaeaea, 0%, #e6e6e6, 100%);
    background-image: -moz-linear-gradient(top, #eaeaea 0%, #e6e6e6 100%);
    background-image: linear-gradient(to bottom, #eaeaea 0%, #e6e6e6 100%);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffefefef', endColorstr='#ffe6e6e6', GradientType=0);
}

.dropdown-menu > .active > a:hover,
.dropdown-menu > .active > a:focus {
    background-color: #bcbcbc;
    background-image: -webkit-gradient(linear, left 0%, left 100%, from(#cccccc), to(#bcbcbc));
    background-image: -webkit-linear-gradient(top, #cccccc, 0%, #bcbcbc, 100%);
    background-image: -moz-linear-gradient(top, #cccccc 0%, #bcbcbc 100%);
    background-image: linear-gradient(to bottom, #cccccc 0%, #bcbcbc 100%);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffcccccc', endColorstr='#ffbcbcbc', GradientType=0);
}


/* Danger table rows */
/* - Change the rows border color to red instead of the default gray
   - Remove the table head border and assign it to the top body row to allow customization of the color
   - Add a slightly darker odd row color for striped tables */
.table>thead>tr>td.danger, .table>tbody>tr>td.danger, .table>tfoot>tr>td.danger,
.table>thead>tr>th.danger, .table>tbody>tr>th.danger, .table>tfoot>tr>th.danger,
.table>thead>tr.danger>td, .table>tbody>tr.danger>td, .table>tfoot>tr.danger>td,
.table>thead>tr.danger>th, .table>tbody>tr.danger>th, .table>tfoot>tr.danger>th {
    border-bottom: 1px solid #E1AEAD !important;
    border-top: 1px solid #E1AEAD !important;
}

.table>thead>tr:last-child>td.danger, .table>tbody>tr:last-child>td.danger, .table>tfoot>tr:last-child>td.danger,
.table>thead>tr:last-child>th.danger, .table>tbody>tr:last-child>th.danger, .table>tfoot>tr:last-child>th.danger,
.table>thead>tr:last-child.danger>td, .table>tbody>tr:last-child.danger>td, .table>tfoot>tr:last-child.danger>td,
.table>thead>tr:last-child.danger>th, .table>tbody>tr:last-child.danger>th, .table>tfoot>tr:last-child.danger>th {
    border-bottom: none !important;
}

.table>thead>tr:first-child>td.danger, .table>tbody>tr:first-child>td.danger, .table>tfoot>tr:first-child>td.danger,
.table>thead>tr:first-child>th.danger, .table>tbody>tr:first-child>th.danger, .table>tfoot>tr:first-child>th.danger,
.table>thead>tr:first-child.danger>td, .table>tbody>tr:first-child.danger>td, .table>tfoot>tr:first-child.danger>td,
.table>thead>tr:first-child.danger>th, .table>tbody>tr:first-child.danger>th, .table>tfoot>tr:first-child.danger>th {
    border-top: 2px solid #E1AEAD !important;
}

.table>thead>tr:first-child>th, .table>tbody>tr:first-child>th, .table>tfoot>tr:first-child>th, .table>thead>tr:first-child>td,
.table>tbody>tr:first-child>td, .table>tfoot>tr:first-child>td {
    border-top: 2px solid #ddd;
}

.table>thead>tr>th {
    border-bottom: none;
}

.table-striped>tbody>tr.danger:nth-child(odd)>td, .table-striped>tbody>tr.danger:nth-child(odd)>th,
.table-striped>tbody>tr:nth-child(odd)>td.danger, .table-striped>tbody>tr:nth-child(odd)>th.danger {
    background-color:#f0d5d5 !important;
}

/* Custom dynamic button style */
/* - Currently used for collapsible example buttons
   - Title changes from "More Examples" to "Less Examples" and vs versa */
a.btn-more.collapsed:before {
    content: "More ";
}

a.btn-more:before {
    content: "Less ";
}

